@@ -244,9 +244,12 @@
 <h3>remove-result<em>  [Test Result]</em>
 </h3>
 <p>This option will permanently remove the saved file set that is set as the first argument.</p>
-<h3>remove-results-from-result-file<em>  [Test Result]</em>
+<h3>remove-result-from-result-file<em>  [Test Result]</em>
 </h3>
 <p>This option is used if there are test results (benchmarks) to be dropped from a given result file. The user must specify a saved results file and then they will be prompted to select the tests/benchmarks to remove.</p>
+<h3>remove-results-from-result-file<em>  [Test Result]</em>
+</h3>
+<p>This option is used if there are test results (benchmarks) to be dropped from a given result file. The user must specify a saved results file and then they will be prompted to provide a string to search for in removing those results from that given result file.</p>
 <h3>remove-run-from-result-file<em>  [Test Result]</em>
 </h3>
 <p>This option is used if there is a set of test results you wish to remove/delete from a saved results file. The user must specify a saved results file and then they will be prompted to select the results identifier associated with the results they wish to remove.</p>
