@@ -1,0 +1,55 @@
+<?php
+
+/*
+	Phoronix Test Suite
+	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
+	Copyright (C) 2020, Phoronix Media
+	Copyright (C) 2020, Michael Larabel
+
+	This program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 3 of the License, or
+	(at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with this program. If not, see <http://www.gnu.org/licenses/>.
+*/
+
+class remove_result_from_result_file implements pts_option_interface
+{
+	const doc_section = 'Result Management';
+	const doc_description = 'This option is used if there are test results (benchmarks) to be dropped from a given result file. The user must specify a saved results file and then they will be prompted to select the tests/benchmarks to remove.';
+
+	public static function argument_checks()
+	{
+		return array(
+		new pts_argument_check(0, array('pts_types', 'is_result_file'), null)
+		);
+	}
+	public static function run($r)
+	{
+		$result_file = new pts_result_file($r[0]);
+		$ros = array();
+		foreach($result_file->get_result_objects() as $key => $ro)
+		{
+			$ros[$key] = $ro->test_profile->get_title() . PHP_EOL . $ro->get_arguments_description();
+		}
+
+		$remove_ids = pts_user_io::prompt_text_menu('Select the result(s) to remove', $ros, true, true);
+
+		foreach(explode(',', $remove_ids) as $id)
+		{
+			$result_file->remove_result_object_by_id($id);
+		}
+
+		pts_client::save_test_result($result_file->get_file_location(), $result_file->get_xml());
+		pts_client::display_result_view($result_file, false);
+	}
+}
+
+?>
